Modifed files css, images, html

--- a/views/login.html
+++ b/views/login.html
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <header class="header--main">
+        <div class="header__main--bar">
+
+            <div class="header__div--burger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+
+            <div class="header__div--logo">
+                <a href="/"><img  class="header--logo" src="/images/logo.jpg" alt="Mates"></a>
+            </div>
+
+            <div class="header__div--cart">
+                <a href="/productCart"><i class="fa-solid fa-shopping-cart"></i></a>
+            </div>
+
+        </div>                   
+    </header>
     <main class="main--form">
         <form action="#" method="POST" class="form--login">
             <h5>Formulario Login</h5>
@@ -19,5 +36,35 @@
             <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
         </form>
     </main>
+
+    <footer class="footer">
+        <section class="footer__article"> 
+            <h4>Nuestras redes</h4>
+            <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
+            <div class="footer__section--div">
+                <a href="#" class="footer__section--nets">
+                <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
+            
+        <section class="footer__article"> 
+            <h4>¿Dónde estamos?</h4>
+            <a href="#" class="footer__section--location">
+                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
+                <p class="footer__section--pLocation">EL MATEADOR </p>
+            </a>
+        </section>    
+
+        <section class="footer__article"> 
+                <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
+        </section>
+    </footer> 
 </body>
 </html>
