--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,15 @@
     width: 70px; 
 }
 
+/*  body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; // Ensure at least the height of the viewport
+  display: flex;
+  flex-direction: column;
+} 
+ */
+
 .main--form {
     font-family: "Poppins", sans-serif;
     background-color: #f1f3f0;
@@ -77,11 +86,10 @@
     width: 100%;
     padding: 20px 30px;
     max-width: 550px;
-    background: #03fc03;
     margin: 0 auto;
-    box-shadow: 7px 13px 37px #000;
-    border-top: 4px solid #ab0101;
-    color: rgb(182, 17, 17);
+    box-shadow: 0px 6px 21px #000;
+    border-top: 4px solid  #344C2A;
+    color: #344C2A;
 }
 .form--login h5 {
     margin: 0;
@@ -97,7 +105,7 @@
     border-bottom: 1px solid;
 }
 .form--login a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 14px;
 }
@@ -155,6 +163,153 @@
     padding: 5px 10px;
     margin-bottom: 15px;
     border-radius: 10px;
+}
+
+  
+.header__main--bar {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Center child elements vertically */
+  padding: 10px; /* Adjust padding as needed */
+}
+  
+.header__div--burger, .header__divv--logo, .header__div--cart {
+  display: inline-block;
+  padding: 10px 10px 10px 10px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.header__div--burger {
+  width: 20%;
+  text-align: left
+}
+
+.header__div--cart {
+  width: 20%;
+  text-align: right; 
+}
+
+.header__div--logo{
+  a {
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  vertical-align: middle;
+  align-items: center;
+}
+
+.header--main {
+  text-align: center; /* Center child elements horizontally */
+}
+
+.header--logo{
+  width: 60px;
+  height: auto;
+  margin: 10px 10px 10px 10px;
+}
+
+.fa-bars{
+  font-size: 24px;
+  color: #1d1d1b;
+  margin: 10px 10px 10px 10px;
+}
+
+.fa-shopping-cart {
+  font-size: 24px;
+  color: #1d1d1b;
+  margin: 10px 10px 10px 10px;
+}
+
+.main__section{
+  background: #fff;
+  background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
+  padding: 10px;font-family: "Poppins";
+  font-size: 20px;
+  color:#1B1B1D;
+}
+
+.main__titulares {
+  font-family: "Poppins";
+  font-size: 20px;
+  color:#1B1B1D;
+  margin-left: 20px; 
+}
+
+.main__item {
+  width: 90%;
+  height: 95px;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #1B1B1D;
+  border-radius: 10px; /* Adjust the border-radius as needed for rounded corners */
+  margin: 20px 20px 20px 20px; /* Adjust the margin to add space between items */
+  overflow: hidden; /* Ensure rounded corners overflow correctly */
+}  
+
+.main__item--div-img, .main__item--product, .main__item--right {
+  display: inline-block;
+  padding: 10px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.main__item--product{
+  width:55%;
+  font-family: "Poppins";
+  font-size: 14px;
+  color:#1B1B1D;
+}
+
+.main__item--image{
+  width: 70px;
+  height: 70px;
+  border: 1px solid #1B1B1D;
+  border-radius: 10px; 
+  padding: 10px 10px 10px 10px; 
+}  
+
+.main__item--right {
+  font-family: "Poppins";
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  height: 100%;
+  width:20%;
+}
+
+.main__item--price {
+  font-family: "Poppins";
+  font-size: 14px;
+  margin-top: auto;
+  height: 1rem;
+}
+
+.main__continuar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-family: "Poppins";
+  font-size: 20px;
+}
+
+.main__continuar--button {
+  width: 100%;
+  background: #344C2A;
+  border: none;
+  border-radius: 10px; 
+  font-family: 'poppins';
+  padding: 12px;
+  color: white;
 }
 
 /* Desarrollo Footer index.html */
