--- a/views/index.html
+++ b/views/index.html
@@ -45,21 +45,21 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-04.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
-                            <p class="section__article--precio"> $6.770</p>
-                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                            <p class="section__article--precio"> Mates</p>
+                            <p class="section__article--descripcion"> Descripcion </p> 
                         </div>                        
                     </article>
 
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-06.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
-                            <p class="section__article--precio"> $6.770</p>
-                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                            <p class="section__article--precio"> Bombillas</p>
+                            <p class="section__article--descripcion"> Descripcion </p> 
                         </div>                        
                     </article>
                 </div>
@@ -67,21 +67,21 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-01.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
-                            <p class="section__article--precio"> $6.770</p>
-                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                            <p class="section__article--precio"> Mates</p>
+                            <p class="section__article--descripcion"> Descripcion </p> 
                         </div>                        
                     </article>
                     
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-05.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
-                            <p class="section__article--precio"> $6.770</p>
-                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                            <p class="section__article--precio"> Bombillas</p>
+                            <p class="section__article--descripcion"> Descripcion </p> 
                         </div>                        
                     </article>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-09.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> 40% descuento</p>
@@ -110,7 +110,7 @@
 
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-08.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> 40% descuento</p>
@@ -122,7 +122,7 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-03.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> 40% descuento</p>
@@ -132,7 +132,7 @@
                     
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-07.jpg" alt="Programacion Full Stack">
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> 40% descuento</p>
