Added productCart view and style

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/productCart.css">
     </head>
     <body>
         <header class="header--main">
@@ -18,7 +19,7 @@
                 </div>
 
                 <div class="header__div--logo">
-                    <a href="/"><img  class="header--logo" src="/images/el-mateador-logo.jpg" alt="Mates"></a>
+                    <a href="/"><img  class="header--logo" src="/images/logo.jpg" alt="Mates"></a>
                 </div>
 
                 <div class="header__div--cart">
@@ -33,11 +34,11 @@
                 <p class="main__titulares">Mi Carrito</p>
                 <div class="main__item">
                     <div class="main__item--div-img">
-                        <img class="main__item--image" src="/images/el-mateador-imagenes-01.jpg" alt="Mate">
+                        <img class="main__item--image" src="/images/mate1.jpg" alt="Mate">
                     </div>
                     <div class="main__item--product">
-                        <h4 class="main__item--name">Mate clásico</h4>
-                        <p class="main__item--description">Mate clásico color negro</p>
+                        <h4 class="main__item--name">Nombre del producto</h4>
+                        <p class="main__item--description">Descripción</p>
                         <p class="main__item--cantidad">
                             <select name="cantidad" id="cantidad">
                                 <option value="1">1</option>
@@ -55,11 +56,11 @@
                 </div>
                 <div class="main__item">
                     <div class="main__item--div-img">
-                        <img class="main__item--image" src="/images/el-mateador-imagenes-07.jpg" alt="Mate">
+                        <img class="main__item--image" src="/images/mate1.jpg" alt="Mate">
                     </div>
                     <div class="main__item--product">
-                        <h4 class="main__item--name">Bombilla</h4>
-                        <p class="main__item--description">Bombilla metálica</p>
+                        <h4 class="main__item--name">Nombre del producto</h4>
+                        <p class="main__item--description">Descripción</p>
                         <p class="main__item--cantidad">
                             <select name="cantidad" id="cantidad">
                                 <option value="1">1</option>
@@ -72,7 +73,7 @@
                     </div>
                     <div class="main__item--right">
                         <i class="fa-solid fa-trash-can" style="color: #1b1b1d;" onclick="removeItem(this)"></i>
-                        <p class="main__item--price">$1500</p>
+                        <p class="main__item--price">$3500</p>
                     </div>
                 </div>
 
