--- a/views/productCart.html
+++ b/views/productCart.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="header__div--logo">
-                    <a href="/"><img  class="header--logo" src="/images/logo.jpg" alt="Mates"></a>
+                    <a href="/"><img  class="header--logo" src="/images/el-mateador-logo.jpg" alt="Mates"></a>
                 </div>
 
                 <div class="header__div--cart">
@@ -34,11 +34,11 @@
                 <p class="main__titulares">Mi Carrito</p>
                 <div class="main__item">
                     <div class="main__item--div-img">
-                        <img class="main__item--image" src="/images/mate1.jpg" alt="Mate">
+                        <img class="main__item--image" src="/images/el-mateador-imagenes-01.jpg" alt="Mate">
                     </div>
                     <div class="main__item--product">
-                        <h4 class="main__item--name">Nombre del producto</h4>
-                        <p class="main__item--description">Descripción</p>
+                        <h4 class="main__item--name">Mate clásico</h4>
+                        <p class="main__item--description">Mate clásico color negro</p>
                         <p class="main__item--cantidad">
                             <select name="cantidad" id="cantidad">
                                 <option value="1">1</option>
@@ -56,11 +56,11 @@
                 </div>
                 <div class="main__item">
                     <div class="main__item--div-img">
-                        <img class="main__item--image" src="/images/mate1.jpg" alt="Mate">
+                        <img class="main__item--image" src="/images/el-mateador-imagenes-07.jpg" alt="Bombilla">
                     </div>
                     <div class="main__item--product">
-                        <h4 class="main__item--name">Nombre del producto</h4>
-                        <p class="main__item--description">Descripción</p>
+                        <h4 class="main__item--name">Bombilla</h4>
+                        <p class="main__item--description">Bombilla metálica</p>
                         <p class="main__item--cantidad">
                             <select name="cantidad" id="cantidad">
                                 <option value="1">1</option>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="main__item--right">
                         <i class="fa-solid fa-trash-can" style="color: #1b1b1d;" onclick="removeItem(this)"></i>
-                        <p class="main__item--price">$3500</p>
+                        <p class="main__item--price">$1500</p>
                     </div>
                 </div>
 
