--- a/public/css/login.css
+++ b/public/css/login.css
@@ -16,12 +16,20 @@
     font-size: 15px;
 }
 
+.main__input--desc {
+    text-align: left;
+    font-family: "Poppins";
+    font-size: 14px;
+    color:#1B1B1D;
+}
+
 .form--login {
     width: 100%;
     padding: 20px 30px;
     max-width: 550px;
     margin: 0 auto;
     color: #344C2A;
+    text-align: left;
 }
 
 .form--login h5 {
@@ -34,7 +42,7 @@
 
 .form--login p {
     height: 40px;
-    text-align: center;
+    text-align: left;
 }
 
 .form--login a {
@@ -51,11 +59,19 @@
     font-family: 'poppins';
     padding: 12px;
     color: white;
+    margin-bottom: 20px;
   }
 
-.main__titulares {
+.main__login--titulares {
     font-family: "Poppins";
     font-size: 20px;
     color:#1B1B1D;
-    margin-left: 20px; 
+    /* margin-left: 20px;  */
+  }
+
+.main__form--bottom-options{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
