--- a/views/login.html
+++ b/views/login.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
     <header class="header--main">
@@ -29,11 +30,16 @@
     </header>
     <main class="main--form">
         <form action="#" method="POST" class="form--login">
-            <h5>Formulario Login</h5>
-            <input class="main__form--inputs" type="text" name="usuario" value="" placeholder="Usuario">
-            <input class="main__form--inputs" type="password" name="contrasena" value="" placeholder="Contraseña">
-            <button class="main__buttons--login" type="submit" >Ingresar</button>
-            <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
+            <p class="main__login--titulares">Iniciar sesión</p>
+            <p class="main__input--desc">Correo electrónico</p>
+            <input class="main__form--inputs" type="text" name="email" value="">
+            <p class="main__input--desc">Contraseña</p>
+            <input class="main__form--inputs" type="password" name="password" value="">
+            <button class="main__buttons--login" type="submit" >Iniciar sesión</button>
+            <div class="main__form--bottom-options">
+                <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
+                <p><a href="#">¿No tenés cuenta? Registrate</a></p>
+            </div>
         </form>
     </main>
 
