--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,7 +58,19 @@
 .header--logo:hover{
     width: 70px; 
 }
-
+.header__nav--menu{
+    display: none;
+}
+.header__nav--menu ul {
+    list-style: none;
+}
+.header__nav--menu a {
+    text-decoration: none;
+    color:#222222;
+    display: inline-block;
+    padding: 6px 0 6px 0;
+    font-size: 10px;
+}
 /*  body {
   margin: 0;
   padding: 0;
@@ -542,8 +554,22 @@
     align-items: flex-start; 
     padding-top: 15px;
 }
-
-
+@media(min-width:481px) {
+    .header__nav--menu{
+        display: flex;
+        justify-content: space-between;
+    }
+    .header__nav--menu ul{
+        display: flex;
+        margin-top: 15px;
+    }
+    .header__nav--menu li{
+        margin: 0 6px; 
+    }
+    .header__nav--menu a{
+        font-size: 10px;
+    }
+}
 
 @media(min-width:769px) {
     .main__section--div4 {
@@ -552,6 +578,7 @@
         align-items: stretch;
     }
 }
+
 @media (min-width:1200px) {
     /* .main--home{
         max-width: 1200px;
@@ -572,5 +599,14 @@
         margin: 0 auto; 
         align-items: center;  
     }
-    
+    .header__nav--menu {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    .header__nav--menu li{
+        margin: 0 10px;
+    }
+    .header__nav--menu a{
+        font-size: 14px;
+    }
 }
