--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,6 @@
 <body>
     <header class="header--main">
         <div class="header__main--bar">
-
             <div class="header__div--burger">
                 <i class="fa-solid fa-bars"></i>
             </div>
@@ -24,11 +23,22 @@
             <div class="header__div--cart">
                 <a href="/productCart"><i class="fa-solid fa-shopping-cart"></i></a>
             </div>
-
-        </div>                   
+        </div>
+        <nav class="header__nav--menu">
+            <ul class="header__nav--option">
+                <li type="none"> <a href="#"> Productos</a> </li>
+                <li type="none"> <a href="#"> Promociones</a> </li>
+                <li type="none"> <a href="#"> Vender</a> </li>
+                <li type="none"> <a href="#"> Contacto</a> </li>
+            </ul>
+            
+            <ul class="header__nav--login">
+                <li type="none"> <a href="/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>
+                <li type="none"> <a href="/login"> Ingresá&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
+            </ul>
+        </nav>                 
     </header>
    
-  
     <main class="main--home">
         <div class="main--banner">
             <img  class="banner"  src="/images/banner-el-mateador_Mesa de trabajo 1.jpg" alt="banner">
