--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -15,13 +15,40 @@
 
 <body>
     <header class="header--main">
-        <div class="header__div--logo">
-            <a href="http://localhost:3043/"><img class="header--logo" src="/images/logo.svg" alt="grupo5"></a>
+        <div class="header__main--bar">
+
+            <div class="header__div--burger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+
+            <div class="header__div--logo">
+                <a href="/"><img class="header--logo" src="/images/logo.svg" alt="Mates"></a>
+            </div>
+
+            <div class="header__div--cart">
+                <a href="/productCart"><i class="fa-solid fa-shopping-cart"></i></a>
+            </div>
+
         </div>
+        <nav class="header__nav--menu">
+            <ul class="header__nav--option">
+                <li type="none"> <a href="#"> Productos</a> </li>
+                <li type="none"> <a href="#"> Promociones</a> </li>
+                <li type="none"> <a href="#"> Vender</a> </li>
+                <li type="none"> <a href="#"> Contacto</a> </li>
+            </ul>
+
+            <ul class="header__nav--login">
+                <li type="none"> <a href="/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a>
+                </li>
+                <li type="none"> <a href="/login"> Ingresá&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <div><img class="image__product--grande" src="/images/el-mateador-imagenes-01.jpg"
+                alt="el-mateador-imagenes-01" /></div>
         <div class="images__products">
-            <img class="image__product" src="/images/el-mateador-imagenes-01.jpg" alt="el-mateador-imagenes-01" />
             <img class="image__product" src="/images/el-mateador-imagenes-02.jpg" alt="el-mateador-imagenes-02">
             <img class="image__product" src="/images/el-mateador-imagenes-03.jpg" alt="el-mateador-imagenes-03">
             <img class="image__product" src="/images/el-mateador-imagenes-04.jpg" alt="el-mateador-imagenes-04">
