--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,54 +75,13 @@
     font-size: 10px;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-} 
-
-.form--register {
-    width: 100%;
-    max-width: 550px;
-    background-color: #f1f3f0;
-    border: none;
-    padding: 20px 30px;
-    color: black;
-    margin: 0 auto;
-    font-size: 16px;
-    border-radius: 4px;
-    padding: 20px 30px;
-}
-.form--register h4 {
-    font-size: 22px;
-    margin-bottom: 20px;
-}
-.form--register p {
-    height: 60px;
-    text-align: center;
-    font-size: 18px;
-    line-height: 40px;
-}
-.form--register a {
-    color: blue;
-    text-decoration: none;
-}
-.form--register a:hover {
-    color: black;
-    text-decoration: underline;
-}
-.main__buttons--register {
-    width: 100%;
-    background-color: #ffffff;
-    border:none;
-    font-size: 18px;
-    color:black;
-    padding: 5px 10px;
-    margin-bottom: 15px;
-    border-radius: 10px;
-}
+} */
   
 .header__main--bar {
   width: 100%;
