--- a/views/register.html
+++ b/views/register.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/register.css">
 </head>
 <body>
     <header class="header--main">
@@ -30,18 +31,23 @@
 
     <main class="main--form">
         <form action="#" method="POST" class="form--register">
-            <h4>Formulario Registro</h4>
-            <input class="main__form--inputs" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre" required>
-            <input class="main__form--inputs" type="text" name="apellido" id="apellido" placeholder="Ingrese su Apellido" required>
-            <input class="main__form--inputs" type="email" name="correo" id="correo" placeholder="Ingrese su Correo" required>
-            <input class="main__form--inputs" type="password" name="contraseña" id="contraseña" placeholder="Ingrese Contraseña" required>
-            <input class="main__form--inputs" type="password" name="correo" id="correo" placeholder="Repita Contraseña" required>
+            <p class="main__register--titulares">Crear cuenta</p>
+            <p class="main__input--desc">Nombre completo*</p>
+            <input class="main__form--inputs" type="text" name="nombreCompleto" id="nombreCompleto" required>
+            <p class="main__input--desc">Correo electrónico*</p>            
+            <input class="main__form--inputs" type="email" name="correo" id="correo" required>
+            <p class="main__input--desc">Contraseña*</p>
+            <input class="main__form--inputs" type="password" name="password" id="password" required>
+            <p class="main__input--desc">Repetir contraseña*p>
+            <input class="main__form--inputs" type="password" name="password2" id="password2" required>
             <div>
                 <input type="checkbox" id="cbox1" value="first_checkbox"> Estoy de acuerdo con <a href="#">Terminos y Condiciones</a>
             </div>
             <br>
-            <button class="main__buttons--register" type="submit" >Registrar</button>
-            <p><a href="#">¿Ya tengo Cuenta?</a></p>
+            <button class="main__buttons--register" type="submit" >Crear cuenta</button>
+            <div class="main__form--bottom-options">
+                <p><a href="#">¿Ya tengo Cuenta?</a></p>
+            </div>
         </form>
     </main>
 
@@ -73,6 +79,6 @@
         <section class="footer__article"> 
                 <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
         </section>
-    </footer>
+    </footer> 
 </body>
 </html> 
