--- a/views/productCart.html
+++ b/views/productCart.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="header__div--logo">
-                    <a href="/"><img  class="header--logo" src="/images/el-mateador-logo.jpg" alt="Mates"></a>
+                    <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
                 </div>
 
                 <div class="header__div--cart">
