--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,34 +11,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <header class="header--main">
-        <div class="header__main--bar">
-            <div class="header__div--burger">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-
-            <div class="header__div--logo">
-                <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
-            </div>
-
-            <div class="header__div--cart">
-                <a href="/productCart"><i class="fa-solid fa-shopping-cart"></i></a>
-            </div>
-        </div>
-        <nav class="header__nav--menu">
-            <ul class="header__nav--option">
-                <li type="none"> <a href="#"> Productos</a> </li>
-                <li type="none"> <a href="#"> Promociones</a> </li>
-                <li type="none"> <a href="#"> Vender</a> </li>
-                <li type="none"> <a href="#"> Contacto</a> </li>
-            </ul>
-            
-            <ul class="header__nav--login">
-                <li type="none"> <a href="/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>
-                <li type="none"> <a href="/login"> Ingresá&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
-            </ul>
-        </nav>                 
-    </header>
+    <%- include('./partials/header.ejs') %>
    
     <main class="main--home">
         <div class="main--banner">
@@ -56,7 +29,7 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <a href="/productDetail">
+                            <a href="/products/productDetail">
                                 <img class="main__article--img" src="/images/el-mateador-imagenes-04.jpg" alt="Programacion Full Stack">
                             </a>
                         </div>                        
@@ -173,35 +146,7 @@
         </section>
     </main>
     
-    <footer class="footer">
-        <section class="footer__article"> 
-            <h4>Nuestras redes</h4>
-            <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
-            <div class="footer__section--div">
-                <a href="#" class="footer__section--nets">
-                <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#" class="footer__section--nets">
-                    <i class="fa-brands fa-square-facebook"></i>
-                </a>
-                <a href="#" class="footer__section--nets">
-                    <i class="fa-brands fa-tiktok"></i>
-                </a>
-            </div>
-        </section>
-            
-        <section class="footer__article"> 
-            <h4>¿Dónde estamos?</h4>
-            <a href="#" class="footer__section--location">
-                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
-                <p class="footer__section--pLocation">EL MATEADOR </p>
-            </a>
-        </section>    
-
-        <section class="footer__article"> 
-                <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
-        </section>
-    </footer>  
+    <%- include('./partials/footer.ejs') %>  %>
 </body>
 </html>
 
