Flie productAdd.ejs

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -75,6 +75,6 @@
         </section>
     </main>
     
-    <%- include('../partials/footer.ejs') %>  %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
