--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -16,7 +16,7 @@
 <body>
     <%- include('../partials/header.ejs') %>
     
-    <main>
+    <main class="main--form">
         <div><img class="image__product--grande" src="/images/el-mateador-imagenes-01.jpg"
                 alt="el-mateador-imagenes-01" /></div>
         <div class="images__products">
@@ -60,7 +60,7 @@
 
     </main>
 
-    <%- include('../partials/footer.ejs') %>  %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
