--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -1,13 +1,14 @@
 .main__section{
   background: #fff;
   background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
-  padding: 10px;font-family: "Poppins";
+  padding: 10px;
+  font-family: "Poppins", sans-serif;
   font-size: 20px;
   color:#1B1B1D;
 }
 
 .main__titulares {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 20px;
   color:#1B1B1D;
   margin-left: 20px; 
@@ -33,7 +34,7 @@
 
 .main__item--product{
   width:55%;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   color:#1B1B1D;
 }
@@ -47,7 +48,7 @@
 }  
 
 .main__item--right {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 24px;
   display: flex;
   flex-direction: column;
@@ -57,7 +58,7 @@
 }
 
 .main__item--price {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   margin-top: auto;
   height: 1rem;
@@ -68,7 +69,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 20px;
 }
 
@@ -77,7 +78,7 @@
   background: #344C2A;
   border: none;
   border-radius: 10px; 
-  font-family: 'poppins';
+  font-family: "Poppins", sans-serif;
   padding: 12px;
   color: white;
 }
