--- a/public/css/register.css
+++ b/public/css/register.css
@@ -2,7 +2,7 @@
     background: #fff;
     background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
     padding: 10px;
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
     /* color:#1B1B1D; */
 }
@@ -18,7 +18,7 @@
 
 .main__input--desc {
     text-align: left;
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     color:#1B1B1D;
 }
@@ -51,14 +51,14 @@
     background: #344C2A;
     border: none;
     border-radius: 10px; 
-    font-family: 'poppins';
+    font-family: "Poppins", sans-serif;
     padding: 12px;
     color: white;
     margin-bottom: 20px;
 }
 
 .main__register--titulares {
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
     color:#1B1B1D;
     height: 40px;
@@ -67,7 +67,7 @@
 
 .main__input--desc {
     text-align: left;
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     color:#1B1B1D;
 }
