--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: poppins, "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 /* body {
@@ -209,18 +209,19 @@
 }
 
 .main__section{
-  background: #fff;
-  background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
-  padding: 10px;font-family: "Poppins";
-  font-size: 20px;
-  color:#1B1B1D;
+    background: #fff;
+    background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
+    padding: 10px;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    color:#1B1B1D;
 }
 
 .main__titulares {
-  font-family: "Poppins";
-  font-size: 20px;
-  color:#1B1B1D;
-  margin-left: 20px; 
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    color:#1B1B1D;
+    margin-left: 20px; 
 }
 
 .main__item {
@@ -242,10 +243,10 @@
 }
 
 .main__item--product{
-  width:55%;
-  font-family: "Poppins";
-  font-size: 14px;
-  color:#1B1B1D;
+    width:55%;
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    color:#1B1B1D;
 }
 
 .main__item--image{
@@ -257,39 +258,39 @@
 }  
 
 .main__item--right {
-  font-family: "Poppins";
-  font-size: 24px;
-  display: flex;
-  flex-direction: column;
-  text-align: right;
-  height: 100%;
-  width:20%;
+    font-family: "Poppins", sans-serif;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    height: 100%;
+    width:20%;
 }
 
 .main__item--price {
-  font-family: "Poppins";
-  font-size: 14px;
-  margin-top: auto;
-  height: 1rem;
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    margin-top: auto;
+    height: 1rem;
 }
 
 .main__continuar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  font-family: "Poppins";
-  font-size: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
 }
 
 .main__continuar--button {
-  width: 100%;
-  background: #344C2A;
-  border: none;
-  border-radius: 10px; 
-  font-family: 'poppins';
-  padding: 12px;
-  color: white;
+    width: 100%;
+    background: #344C2A;
+    border: none;
+    border-radius: 10px; 
+    font-family: "Poppins", sans-serif;
+    padding: 12px;
+    color: white;
 }
 
 .main__buttons--login {
@@ -308,7 +309,7 @@
     background: #344C2A;
     border: none;
     border-radius: 10px;
-    font-family: 'poppins';
+    font-family: "Poppins", sans-serif;
     padding: 12px;
     color: white;
 }
@@ -318,7 +319,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
 }
 
@@ -333,8 +334,9 @@
 }
 
 .image__product--grande {
-    display: inline-block;
-    width: 100%;
+    display: flex;
+    margin: 0 auto;
+    width: 70%;
 }
 
 .titles {
@@ -379,6 +381,9 @@
     .header__nav--menu a{
         font-size: 10px;
     }
+    .header__div--burger{
+        visibility: hidden;
+    }
 }
 
 @media(min-width:769px) {
@@ -404,5 +409,10 @@
     }
     .header__nav--menu a{
         font-size: 14px;
+    }
+    .main--form{
+        max-width: 1200px;
+        margin: 0 auto; 
+        align-items: center;
     }
 }
