--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -22,7 +22,7 @@
             <input class="main__form--inputs" type="email" name="correo" id="correo" required>
             <p class="main__input--desc">Contraseña*</p>
             <input class="main__form--inputs" type="password" name="password" id="password" required>
-            <p class="main__input--desc">Repetir contraseña*p>
+            <p class="main__input--desc">Repetir contraseña*</p>
             <input class="main__form--inputs" type="password" name="password2" id="password2" required>
             <div>
                 <input type="checkbox" id="cbox1" value="first_checkbox"> Estoy de acuerdo con <a href="#">Terminos y Condiciones</a>
