--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -1,6 +1,7 @@
 .main__section{
-  background: #fff;
-  background: linear-gradient(to bottom, #e7e7e7, #fff 3%); /* Adjust colors as needed */
+  box-shadow:
+        inset 0 -10px 40px 21px rgb(255,255,255),
+        inset 0 6px 9px 0px rgb(100, 100, 100, 0.6 );
   padding: 10px;
   font-family: "Poppins", sans-serif;
   font-size: 20px;
