--- a/src/views/products/product.ejs
+++ b/src/views/products/product.ejs
@@ -11,40 +11,42 @@
         rel="stylesheet">
     <link rel="stylesheet" href="\css\normalize.css">
     <link rel="stylesheet" href="\css\styles.css">
+    <link rel="stylesheet" href="\css\product.css">
 </head>
 
 <body>
     <%- include('../partials/header.ejs') %>
     
     <main class="main--form">
-        <form action="/product/:id" method="POST" enctype="multipart/form-data">
-            
-            <!-- <input type="image" name="image" id="image" accept=".jpg,.png" src="/images/<%= product.images[0] %>"   multiple> -->
-            <label class="name" for="name">Nombre:</label></br>
-            <input class="name" value="<%= product.name %>" required></br>
-            <label class="description" for="description">Descripción:</label></br>
-            <textarea class="description" cols="35" rows="6"><%= product.description %></textarea></br>
+        <form action="/product/:id" method="POST" enctype="multipart/form-data" class="form--products">
+            <p class="main__products--titulares">Detalle de Producto</p>
+            <label class="main__input--desc" for="name">Nombre</label></br>
+            <input class="main__form--inputs" value="<%= product.name %>" required></br>
+            <label class="main__input--desc" for="description">Descripción</label></br>
+            <textarea class="main__form--inputs" cols="35" rows="6"><%= product.description %></textarea></br>
             
             <div class="images__products">
+                <label class="main__input--desc" for="images">Imágenes</label></br>
                 <% for(let image of product.images) { %>
                     <img class="image__product" src="/images/<%= image %>" alt="<%= product.name %>">
                 <% } %>
             </div>
 
-            <label class="price" for="price">Precio:</label>
-            <input class="price" value="$<%= product.price %>"></br>
-            <label class="color label" for="color">Color:</label>
-            <select name="color" id="color">
+            <label class="main__input--desc"" for="price">Precio</label>
+            <input class="main__form--inputs" value="$<%= product.price %>"></br>
+            <label class="main__input--desc"" for="color">Color</label></br>
+            <select class="main__form--inputs" name ="color" id="color">
                 <option value="<%= product.colors[0] %>"><%= product.colors[0] %></option>
                 <option value="<%= product.colors[1] %>"><%= product.colors[1] %></option>
                 <option value="<%= product.colors[2] %>"><%= product.colors[2] %></option>
             </select> </br>
             
-            <label class="stock" for="color">Stock:</label>
-            <input class="stock" value="<%= product.stock %>" ></br>
-            <label class="category" for="category">Categoría:</label>
-            <input class="category" value="<%= product.category %>" >
+            <label class="main__input--desc"" for="color">Stock</label>
+            <input class="main__form--inputs" value="<%= product.stock %>" ></br>
+            <label class="main__input--desc"" for="category">Categoría</label>
+            <input class="main__form--inputs" value="<%= product.category %>" >
 
+            <button class="main__buttons--products" type="submit" >Guardar</button>
         </form>
 
     </main>
