--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,8 +14,8 @@
     </div>
     <nav class="header__nav--menu">
         <ul class="header__nav--option">
-            <li type="none"> <a href="#"> Productos</a> </li>
-            <li type="none"> <a href="#"> Promociones</a> </li>
+            <li type="none"> <a href="/products/create"> Crear Productos</a> </li>
+            <li type="none"> <a href="/products/3/update"> Editar Productos</a> </li>
             <li type="none"> <a href="#"> Vender</a> </li>
             <li type="none"> <a href="#"> Contacto</a> </li>
         </ul>
