--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -24,8 +24,8 @@
             <img class="image__product" src="/images/el-mateador-imagenes-03.jpg" alt="el-mateador-imagenes-03">
             <img class="image__product" src="/images/el-mateador-imagenes-04.jpg" alt="el-mateador-imagenes-04">
         </div>
-        <p class="titles">Mate camionero Patricio Rey</p>
-        <p class="price">$3.500</p>
+        <p class="titles"><%=products.name%></p>
+        <p class="price">$<%=products.price%></p>
         <label class="color label" for="color">Color:</label>
         <select name="color" id="color">
             <option value="negro">Negro</option>
