changed files and CRUD

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,15 +14,16 @@
     </div>
     <nav class="header__nav--menu">
         <ul class="header__nav--option">
-            <li type="none"> <a href="/products/create"> Crear Productos</a> </li>
-            <li type="none"> <a href="/products/3/update"> Editar Productos</a> </li>
+            <li type="none"> <a href="#"> Productos</a> </li>
             <li type="none"> <a href="#"> Vender</a> </li>
+            <li type="none"> <a href="#"> Ofertas</a> </li>
             <li type="none"> <a href="#"> Contacto</a> </li>
         </ul>
         
         <ul class="header__nav--login">
             <li type="none"> <a href="/users/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>
             <li type="none"> <a href="/users/login"> Ingresá&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
+            <li type="none"> <a href="/products"> Admin</a> </li>
         </ul>
     </nav>                 
 </header>
