--- a/public/css/productEdit.css
+++ b/public/css/productEdit.css
@@ -34,6 +34,8 @@
     border: solid 1px #666;
     border-radius: 6px;
     font-size: 16px;
+    flex-wrap: wrap;
+    align-self: center;
 }
 .form__categories--checkbox {
     margin-right: 10px; 
