--- a/public/css/productEdit.css
+++ b/public/css/productEdit.css
@@ -61,6 +61,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     margin-left: 10px;
+    margin-right: 10px;
     color:#1B1B1D;
 }
 .main__input--control {
