--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -26,36 +26,40 @@
             </div>
 
             <div class="control--form">
-                <label class="control__form--label" for="description" >Descripcion Producto:</label>
+                <label class="control__form--label" for="description" >Descripción:</label>
                 <textarea class="main__input--control" name="description" id="description" cols="15" rows="6" required><%=product.description%></textarea>
             </div>
             
             <div class="control__form--photo">
-                <label for="images" class="control__form--label">Imagen del Producto:</label>
+                <label for="images" class="control__form--label">Imágenes:</label>
                 <% for(let images of product.images) { %>
                     <img class="image__product" id="images" name="images" src="/images/<%= images %>" alt="<%=product.name %>">
                 <% } %>
             </div>
+            
             <div class="control--form">
-                <label class="control__form--label" for="price" >Precio del producto:</label>
+                <label class="control__form--label" for="price" >Precio:</label>
                 <input class="main__input--control"  type="number" id="price" name="price" value="<%=product.price%>" placeholder="Precio" required>
             </div>
             
             <div class="control--form">
-                <label class="control__form--label" for="colors" >Colores del producto:</label>
+                <label class="control__form--label" for="colors" >Colores:</label>
                 <input class="main__input--control"  type="text" id="colors" name="colors" value="<%=product.colors%>" placeholder="Stock" required>
             </div>
 
             <div class="control--form">
-                <label class="control__form--label" for="stockProduct" >Stock disponible del producto:</label>
+                <label class="control__form--label" for="stockProduct" >Stock disponible:</label>
                 <input class="main__input--control"  type="number" id="stock" name="stock" value="<%=product.stock%>" placeholder="Stock" required>
             </div>
 
-            <div class="control--form">
-                <label class="control__form--label" for="category" >Categoria:</label>
-                <input class="main__input--control"  type="text" id="category" name="category" value="<%=product.category%>" placeholder="Categoria del producto" required>
-            </div>
-
+            <label class="control__form--label" for="category">Categoría</label>
+            <select name="category" id="category" class="main__input--control">
+                <option value="<%=product.category%>"><%=product.category%></option>
+                <option value="Mates">Mates</option>
+                <option value="Termos">Termos</option>
+                <option value="Bombillas">Bombillas</option>
+                <option value="Bolso Matero">Bolsos Materos</option>
+            </select>
            
             <br>
          
