adds images files on product

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -36,7 +36,9 @@
 
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-06.jpg" alt="Programacion Full Stack">
+                            <a href="/products/productDetail/2">
+                                <img class="main__article--img" src="/images/el-mateador-imagenes-06.jpg" alt="Programacion Full Stack">
+                            </a>
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> Bombillas</p>
@@ -48,7 +50,9 @@
                 <div class="main__section--div2">
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-01.jpg" alt="Programacion Full Stack">
+                        <a href="/products/productDetail/3">
+                            <img class="main__article--img" src="/images/el-mateador-imagenes-09.jpg" alt="Programacion Full Stack">
+                        </a>
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> Mates</p>
@@ -58,7 +62,9 @@
                     
                     <article class="main__secction--article">
                         <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-05.jpg" alt="Programacion Full Stack">
+                            <a href="/products/productDetail/4">
+                                <img class="main__article--img" src="/images/el-mateador-imagenes-07.jpg" alt="Programacion Full Stack">
+                            </a>
                         </div>                        
                         <div class="article__div--flex">
                             <p class="section__article--precio"> Bombillas</p>
