--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,6 +22,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     color:#1B1B1D;
+    margin-left: 9px;
 }
 
 .form--login {
@@ -41,10 +42,7 @@
     font-size: 20px;
 }
 
-.form--login p {
-    height: 40px;
-    text-align: left;
-}
+
 
 .form--login a {
     color: rgb(0, 0, 0);
@@ -67,7 +65,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 20px;
     color:#1B1B1D;
-    /* margin-left: 20px;  */
+    margin-bottom: 20px;
   }
 
 .main__form--bottom-options{
