--- a/public/css/register.css
+++ b/public/css/register.css
@@ -17,13 +17,6 @@
     font-size: 15px;
 }
 
-.main__input--desc {
-    text-align: left;
-    font-family: "Poppins", sans-serif;
-    font-size: 14px;
-    color:#1B1B1D;
-}
-
 .form--register {
     width: 100%;
     max-width: 550px;
@@ -71,6 +64,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     color:#1B1B1D;
+    margin-left: 9px;
 }
 
 .main__form--bottom-options{
