--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -280,6 +280,7 @@
     padding: 10px;
     font-family: "Poppins", sans-serif;
     font-size: 20px;
+    margin-top: 10px;
 }
 
 .main__continuar--button {
