--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,11 +16,15 @@
     <main class="main--form">
         <form action="#" method="POST" class="form--login">
             <p class="main__login--titulares">Iniciar sesión</p>
+            
             <p class="main__input--desc">Correo electrónico</p>
-            <input class="main__form--inputs" type="text" name="email" value="">
+            <input class="main__form--inputs" type="text" name="userEmail" value="">
+           
             <p class="main__input--desc">Contraseña</p>
-            <input class="main__form--inputs" type="password" name="password" value="">
+            <input class="main__form--inputs" type="password" name="passwordUser" value="">
+            
             <button class="main__buttons--login" type="submit" >Iniciar sesión</button>
+            
             <div class="main__form--bottom-options">
                 <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
                 <p><a href="#">¿No tenés cuenta? Registrate</a></p>
